1.修改标题简介。2、修改about内容3、修改主题配色 4、新增文章 5、新增百度分享代码

--- a/index.html
+++ b/index.html
@@ -146,16 +146,27 @@ layout: default
                     {% endfor %}
                 </div>
             </div>
-
-            <!-- <div class="side">
+            <!--Links-->
+            <div class="side">
                 <div>
                     <i class="fa fa-external-link"></i>
                     Links
                 </div>
                 <ul  class="content-ul">
-
+                    <li><a href="http://io.jaylin.top">MyAndroidAppStore</a></li>
                 </ul>
-            </div> -->
+            </div>
+            {% include share.html %}
+             <!--<div class="side">
+                <div>
+                    <i class="fa fa-external-link"></i>
+                    Links
+                </div>
+                <ul  class="content-ul">
+                    <li><a href="http://io.jaylin.top">MyAndroidAppStore</a></li>
+                </ul>
+            </div>-->
+
         </div>
     </div>
 </div>
