--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="page clearfix" index>
     <div class="left">
-        <h1>Welcome to {{site.user_name}} Blog!</h1>
+        <h1>Welcome to my Blog! Author:{{site.user_name}}</h1>
         <small>这里记录着我的前端学习之路</small>
         <hr>
         <ul>
